fixed text overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,6 @@
     cursor: pointer;
 
     max-width: 100%;
-    white-space: normal;
     overflow: hidden;
 }
 
@@ -29,6 +28,7 @@
 
 .team-box p {
     margin: 0;
+    font-size: calc(1vw + 1vh + 0.5vmin);
 }
 
 .favorite-icon {
